# gtsrb-sign-recognition

./: .dockerignore  .gitignore  CameraWebServer.ino  Dockerfile  README.md  docker-compose.yml  esp32test.py  pyproject.toml
app/: streamlit_app.py
app/pages/: 1_Dashboard.py  2_Image_Prediction.py  3_Webcam_Snapshot.py  4_ESP32_Stream.py
app/utils/: app_inference.py
configs/: classes.yaml  config.yaml
src/data/: dataloader.py  dataset.py  prepare_data.py  transforms.py
src/explainability/: batch_gradcam.py  gradcam.py  run_gradcam.py
src/models/: evaluate.py  inference.py  model_factory.py  train.py
src/serving/: app_inference.py  live_stream.py  live_webcam.py
src/utils/: metrics.py  plotting.py  visualize_metrics.py
tests/: test_gradcam.py  test_imports.py  test_model_factory.py
